# dictionary-based_denoisers_FBPnP

./: .gitignore  README.md  benchmark.csv  benchmark.py  benchmark_full.py  benchmark_full_result.py  benchmarks_results.py  benchmarks_results_lamdbas.py  comparison_psnrs.py  convergence_algorithm.py  create_dataset.py  example.py  example_drunet_color.py  example_imagenet.py  figure_imagenet.py  pnp_comparisons.py  pyproject.toml  requirements.txt  results.py  similarity_layers.py  study_dictionary.py
benchmark/: README.rst  config.yml  objective.py  run_config.yml
benchmark/benchmark_utils/: noisy_dataset.py  warm_start_denoiser.py
benchmark/datasets/: cbsd68.py  set3c.py  simulated.py
benchmark/plotting.py/: plot_pnp.py
benchmark/solvers/: analysis.py  dncnn.py  drunet.py  synthesis.py
pnp_unrolling/: datasets.py  dfb_net.py  models.py  optimizers.py  train.py  unrolled_cdl.py  unrolled_denoiser.py  utils.py
utils/: measurement_tools.py
